Added new test cases